# TEST

Extension/: background.js  content.css  content.js  manifest.json  popup.css  popup.html  popup.js
Server/: .env  README.md  pyproject.toml
Server/src/: main.py
Server/src/services/: audio_service.py  stt_service.py  websocket_manager.py
Server/src/youtube_live_subtitles.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
